<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <include layout="@layout/titlebar" />

    <include layout="@layout/titlebar_below" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        android:scrollbars="none">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/white"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:focusable="true"
                android:focusableInTouchMode="true"
                android:orientation="vertical">


                <View
                    android:layout_width="fill_parent"
                    android:layout_height="1dp"
                    android:background="@mipmap/sep" />


                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/double_magin"
                    android:layout_marginRight="@dimen/double_magin"
                    android:orientation="vertical">

                    <com.edenred.android.apps.avenesg.view.HorizontalListView
                        android:id="@+id/hlv_guide"
                        android:layout_width="wrap_content"
                        android:layout_height="@dimen/three_magin"
                        android:layout_marginTop="@dimen/three_magin"></com.edenred.android.apps.avenesg.view.HorizontalListView>

                    <LinearLayout
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:background="@mipmap/circle_orange_small"
                            android:gravity="center"
                            android:text="5"
                            android:textColor="@color/white"
                            android:textSize="10sp" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="12dp"
                            android:text="Confirm Your Account"
                            android:textSize="16sp" />

                        <RelativeLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="12dp">

                            <ImageView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:background="@mipmap/circle_bg" />

                            <ImageView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_centerInParent="true"
                                android:scaleType="centerCrop"
                                android:src="@mipmap/verified" />
                        </RelativeLayout>
                    </LinearLayout>
                </LinearLayout>

                <View
                    android:layout_width="fill_parent"
                    android:layout_height="1dp"
                    android:layout_marginTop="@dimen/double_magin"
                    android:background="@mipmap/sep" />

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/double_magin"
                    android:layout_marginRight="@dimen/double_magin"
                    android:orientation="vertical">


                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/double_magin"
                        android:text="@string/send_password"
                        android:textColor="@color/black_dark"
                        android:textSize="@dimen/big_text_size" />


                    <EditText
                        android:id="@+id/et_enter_OTP"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/double_magin"
                        android:background="@mipmap/barcode_bg"
                        android:hint="Enter One-Time Password"
                        android:inputType="text"
                        android:padding="10dp"
                        android:singleLine="true"
                        android:textColor="@color/hint_color"
                        android:textCursorDrawable="@null"
                        android:textSize="@dimen/normal_text_size" />

                    <TextView
                        android:id="@+id/tv_send_OTP"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/magin"
                        android:text="@string/click_send_password"
                        android:textColor="@color/black_dark"
                        android:textSize="@dimen/big_text_size" />

                    <TextView
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/magin"
                        android:text="@string/indicate_contact"
                        android:textColor="@color/black_dark"
                        android:textSize="@dimen/big_text_size" />


                    <LinearLayout
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/double_magin"
                        android:orientation="horizontal">

                        <RelativeLayout
                            android:id="@+id/rl_agree_email"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content">

                            <ImageView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:scaleType="centerCrop"
                                android:src="@mipmap/checkbox_bg" />

                            <ImageView
                                android:id="@+id/iv_agree_email"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:scaleType="centerCrop"
                                android:src="@mipmap/gou" />
                        </RelativeLayout>

                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="@dimen/magin"
                            android:layout_weight="1"
                            android:text="@string/receive_email"
                            android:textColor="@color/hint_color"
                            android:textSize="@dimen/normal_text_size" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/double_magin"
                        android:orientation="horizontal">

                        <RelativeLayout
                            android:id="@+id/rl_agree_SMS"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content">

                            <ImageView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:scaleType="centerCrop"
                                android:src="@mipmap/checkbox_bg" />

                            <ImageView
                                android:id="@+id/iv_agree_SMS"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:scaleType="centerCrop"
                                android:src="@mipmap/gou" />
                        </RelativeLayout>

                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="@dimen/magin"
                            android:layout_weight="1"
                            android:text="@string/receive_SMS"
                            android:textColor="@color/hint_color"
                            android:textSize="@dimen/normal_text_size" />

                    </LinearLayout>

                    <TextView
                        android:id="@+id/btn_submit"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="@dimen/three_magin"
                        android:layout_marginTop="@dimen/double_magin"
                        android:background="@mipmap/button"
                        android:gravity="center"
                        android:text="Submit"
                        android:textColor="@android:color/white"
                        android:textSize="@dimen/normal_text_size" />

                    <TextView
                        android:id="@+id/tv_bottom_info"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="@dimen/three_magin"
                        android:text="@string/bottom_info"
                        android:textColor="@color/black_dark"
                        android:textSize="9sp" />
                </LinearLayout>
            </LinearLayout>

            <ImageView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:src="@mipmap/line_bottom" />
        </LinearLayout>
    </ScrollView>
</LinearLayout>